hphp/test/zend/good/Zend/tests/add_003.php.expectf

Notice: Object of class stdClass could not be converted to int in %s/add_003.php on line 8

Fatal error: Invalid operand type was used: cannot perform this operation with arrays in %s/add_003.php on line 8
